<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:gravity="center"
        android:orientation="vertical">

        <com.sn.railway.custom.SnTextView
            android:id="@+id/tvForgotPassword"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:layout_marginTop="10dp"
            android:text="@string/forgotpassword"
            android:textAppearance="?android:attr/textAppearanceSmall"
            android:textColor="@color/headercolor"
            android:visibility="visible" />

        <com.sn.railway.custom.SnTextView
            android:id="@+id/tvRegister"

            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="20dp"
            android:text="Don't have account? Signup"
            android:textAppearance="?android:attr/textAppearanceSmall"
            android:textColor="@color/headercolor"
            android:visibility="visible" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:layout_marginTop="20dp"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/img"
            android:layout_width="110dp"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:layout_gravity="center"
            android:adjustViewBounds="true"
            android:scaleType="fitXY"
            android:src="@drawable/spalshmainlogo" />

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginTop="20dp"
            android:background="@color/colorAccent"
            android:visibility="gone"></View>
        <com.sn.railway.custom.SnTextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="10dp"
            android:gravity="center_horizontal"
            android:text="@string/login"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:textColor="@color/textColor"
            android:textStyle="bold"
            android:visibility="visible" />
        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <com.sn.railway.custom.SnEditText
                android:id="@+id/edtEmailId"
                android:layout_width="fill_parent"
                android:layout_height="@dimen/edtheight"


                android:ellipsize="end"
                android:gravity="center_vertical"
                android:hint="@string/emailaddress"
                android:imeOptions="actionNext"
                android:inputType="textEmailAddress"
                android:singleLine="true"
                android:textAppearance="?android:attr/textAppearanceSmall"
                android:textColor="@color/textColor"
                android:textColorHint="@color/textHintColor" />
        </android.support.design.widget.TextInputLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/colorAccent"
            android:visibility="gone"></View>

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <com.sn.railway.custom.SnEditText
                android:id="@+id/edtPassword"
                android:layout_width="fill_parent"
                android:layout_height="@dimen/edtheight"


                android:ellipsize="end"
                android:gravity="center_vertical"
                android:hint="@string/password"
                android:imeOptions="actionDone"
                android:inputType="textPassword"
                android:singleLine="true"
                android:textAppearance="?android:attr/textAppearanceSmall"
                android:textColor="@color/textColor"
                android:textColorHint="@color/textHintColor" />
        </android.support.design.widget.TextInputLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/colorAccent"
            android:visibility="gone"></View>


        <ImageView
            android:id="@+id/btnLogin"
            android:layout_width="match_parent"
            android:layout_height="55dp"
            android:layout_marginTop="10dp"
            android:src="@drawable/nextbutton"
            android:textColor="@color/white"
            android:textSize="@dimen/btn_textsize"></ImageView>


    </LinearLayout>


</RelativeLayout>