<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:orientation="vertical">


    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="match_parent"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="20dp"
        android:layout_marginRight="10dp"
        android:orientation="vertical">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <ImageView
                android:id="@+id/img"
                android:layout_width="110dp"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:layout_gravity="center"
                android:adjustViewBounds="true"
                android:scaleType="fitXY"
                android:src="@drawable/spalshmainlogo" />

            <ImageView
                android:id="@+id/imgClose"
                android:layout_width="35dp"
                android:layout_height="35dp"
                android:layout_alignParentEnd="true"
                android:src="@drawable/error"
                android:tint="@color/colorPrimary" />

        </RelativeLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginTop="20dp"
            android:background="@color/colorAccent"
            android:visibility="gone"></View>

        <com.sn.railway.custom.SnTextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="10dp"
            android:gravity="center_horizontal"
            android:text="User Details"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:textColor="@color/textColor"
            android:textStyle="bold"
            android:visibility="visible" />

        <android.support.v4.widget.NestedScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <android.support.design.widget.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <com.sn.railway.custom.SnEditText
                        android:id="@+id/edtFirstName"
                        android:layout_width="fill_parent"
                        android:layout_height="@dimen/edtheight"
                        android:ellipsize="end"
                        android:gravity="center_vertical"
                        android:hint="@string/firstname"
                        android:imeOptions="actionNext"
                        android:inputType="text"
                        android:singleLine="true"
                        android:textAppearance="?android:attr/textAppearanceSmall"
                        android:textColor="@color/textColor"
                        android:textColorHint="@color/textHintColor" />
                </android.support.design.widget.TextInputLayout>

                <android.support.design.widget.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <com.sn.railway.custom.SnEditText
                        android:id="@+id/edtLastName"
                        android:layout_width="fill_parent"
                        android:layout_height="@dimen/edtheight"
                        android:ellipsize="end"
                        android:gravity="center_vertical"
                        android:hint="@string/lastname"
                        android:imeOptions="actionNext"
                        android:inputType="text"
                        android:singleLine="true"
                        android:textAppearance="?android:attr/textAppearanceSmall"
                        android:textColor="@color/textColor"
                        android:textColorHint="@color/textHintColor" />
                </android.support.design.widget.TextInputLayout>

                <android.support.design.widget.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <com.sn.railway.custom.SnEditText
                        android:id="@+id/edtEmailId"
                        android:layout_width="fill_parent"
                        android:layout_height="@dimen/edtheight"
                        android:ellipsize="end"
                        android:gravity="center_vertical"
                        android:hint="@string/email"
                        android:imeOptions="actionNext"
                        android:inputType="textEmailAddress"
                        android:singleLine="true"
                        android:textAppearance="?android:attr/textAppearanceSmall"
                        android:textColor="@color/textColor"
                        android:textColorHint="@color/textHintColor" />
                </android.support.design.widget.TextInputLayout>

                <android.support.design.widget.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <com.sn.railway.custom.SnEditText
                        android:id="@+id/edtPhone"
                        android:layout_width="fill_parent"
                        android:layout_height="@dimen/edtheight"
                        android:ellipsize="end"
                        android:gravity="center_vertical"
                        android:hint="@string/phone"
                        android:imeOptions="actionNext"
                        android:inputType="phone"
                        android:singleLine="true"
                        android:textAppearance="?android:attr/textAppearanceSmall"
                        android:textColor="@color/textColor"
                        android:textColorHint="@color/textHintColor" />
                </android.support.design.widget.TextInputLayout>

                <android.support.design.widget.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <com.sn.railway.custom.SnEditText
                        android:id="@+id/edtPassword"
                        android:layout_width="fill_parent"
                        android:layout_height="@dimen/edtheight"
                        android:ellipsize="end"
                        android:gravity="center_vertical"
                        android:hint="@string/enterpassword"
                        android:imeOptions="actionNext"
                        android:inputType="textPassword"
                        android:singleLine="true"
                        android:textAppearance="?android:attr/textAppearanceSmall"
                        android:textColor="@color/textColor"
                        android:textColorHint="@color/textHintColor" />
                </android.support.design.widget.TextInputLayout>


                <ImageView
                    android:id="@+id/btnLogin"
                    android:layout_width="match_parent"
                    android:layout_height="55dp"
                    android:layout_marginTop="10dp"
                    android:src="@drawable/nextbutton"
                    android:textColor="@color/white"
                    android:textSize="@dimen/btn_textsize"></ImageView>

            </LinearLayout>
        </android.support.v4.widget.NestedScrollView>
    </LinearLayout>


</RelativeLayout>